# The-Table

./: .gitignore  .mcp.json  AGENT_COMMUNICATION_PROTOCOL.md  AGENT_DEVELOPMENT_GUIDELINES.md  AGENT_ONBOARDING_CHECKLIST.md  AI_DM_Master_Action_Log.md  BUILDER_FIELD_MANUAL.md  CLAUDE.md  CP_TEMPLATE.md  EXTRACTED_SOURCES_QUICK_REF.md  KNOWN_TECH_DEBT.md  New Text Document.txt  PROJECT_COHERENCE_DOCTRINE.md  PROJECT_COMPASS.md  PROJECT_HEALTH_AUDIT.md  PROJECT_STATE_DIGEST.md  README.md  REUSE_DECISION.json  Usage.txt  VERIFICATION_GUIDELINES.md  VERTICAL_SLICE_V1.md  WORKSPACE_MANIFEST.md  audit_vault.py  demo_combat_turn.py  demo_micro_scenario.py  play.py  playtest_log.jsonl  pyproject.toml  requirements.txt  start_server.py
.claude/: claude_settings.json  permissions.json  settings.json  settings.local.json
Research/: Combined_Research_Documents.docx  Combined_Research_Documents.txt
Vault/: Condition — Flat-Footed.md  Condition — Flat-Footed.md.bak.20260204-151343  Condition — Grappled.md  Condition — Grappled.md.bak.20260204-151343  Condition — Prone.md  Condition — Prone.md.bak.20260204-151343  Condition — Stunned.md  Condition — Stunned.md.bak.20260204-151343  MOC — Adventures.md  MOC — Adventures.md.bak.20260204-151343  MOC — Campaign Settings.md  MOC — Campaign Settings.md.bak.20260204-151343  MOC — Character Creation.md  MOC — Character Creation.md.bak.20260204-151343  MOC — Combat.md  MOC — Combat.md.bak.20260204-151343  MOC — Conditions.md  MOC — Conditions.md.bak.20260204-151343  MOC — Core Rules.md  MOC — Core Rules.md.bak.20260204-151343  MOC — Dungeon Master's Guide.md  MOC — Dungeon Master's Guide.md.bak.20260204-151343  MOC — Equipment.md  MOC — Equipment.md.bak.20260204-151343  MOC — Magic.md  MOC — Magic.md.bak.20260204-151343  MOC — Monsters.md  MOC — Monsters.md.bak.20260204-151343  MOC — Skills & Feats.md  MOC — Skills & Feats.md.bak.20260204-151343  MOC — Tables.md  MOC — Tables.md.bak.20260204-151343  Rule — Action Types.md  Rule — Action Types.md.bak.20260204-151343  Rule — Armor Class.md  Rule — Armor Class.md.bak.20260204-151344  Rule — Attacks of Opportunity.md  Rule — Attacks of Opportunity.md.bak.20260204-151344  Rule — Charisma.md  Rule — Charisma.md.bak.20260204-151344  (+645 more)
aidm/: __init__.py  user_profile.py
anvil_diary/: FINDINGS_REGISTER.md  MIRROR_OF.txt  STATE_DIGEST.md
assets/: ATTRIBUTION.json
client/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
client2d/: dm-panel.js  index.html  main.js  map.js  notebook.js  orb.js  sheet.js  slip.js  style.css  ws.js
config/: models.yaml
docs/: AIDM_CORE_RULESET_AUDIT.md  AIDM_CORE_RULESET_AUDIT_EXECUTIVE_SUMMARY.md  AIDM_CORE_RULESET_AUDIT_PASS2.md  AIDM_CORE_RULESET_AUDIT_PASS3_4.md  AIDM_EXECUTION_ROADMAP_V3.md  AIDM_PROJECT_ACTION_PLAN_V2.md  AIDM_PROJECT_ACTION_PLAN_V3.md  AIDM_PROJECT_MASTER_PLAN.md  AUDIT_REPORT.md  CAPABILITY_GATE_ESCALATION_PLAYBOOKS.md  CATALOG_TO_CATEGORY_MAPPING.md  CLAW_EXECUTION_INSTRUCTION_PACKET.md  COMMUNITY_RULES_DEBATES_CATALOG.md  CP-18A-SPELL-TIER-MANIFEST.md  CP001_POSITION_UNIFICATION_DECISIONS.md  CP10_ATTACK_RESOLUTION_DECISIONS.md  CURRENT_CANON.md  (+53 more)
(+7288 files in other folders)
