[project]
name = "aidm"
version = "0.1.0"
description = "AI Dungeon Master — deterministic D&D 3.5e rules engine"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "psutil>=5.9.0",  # Hardware detection (CPU, RAM)
    "pyyaml>=6.0",     # Model registry parsing (models.yaml)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "immersion_fast: Immersion layer tests (sub-millisecond, zero external deps)",
]
