[project]
name = "aidm"
version = "0.1.0"
description = "AI Dungeon Master — deterministic D&D 3.5e rules engine"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "psutil>=5.9.0",  # Hardware detection (CPU, RAM)
    "pyyaml>=6.0",     # Model registry parsing (models.yaml)
    "msgpack>=1.0.0",  # IPC serialization (M1)
    "opencv-python-headless>=4.8.0",  # Image heuristics (M3 Layer 1)
    "Pillow>=10.0.0",  # Image loading (M3 Layer 1)
    "numpy>=1.24.0",   # Array operations (M3 Layer 1)
    "torch>=2.0.0",    # ImageReward model backend (M3 Layer 2)
    "torchvision>=0.15.0",  # ImageReward preprocessing (M3 Layer 2)
    "image-reward @ git+https://github.com/THUDM/ImageReward.git",  # Text-image alignment scoring (M3 Layer 2)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "immersion_fast: Immersion layer tests (sub-millisecond, zero external deps)",
]
